--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.11",
+    "classnames": "^2.3.2",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8"
   }
