chore: fix variable name

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,1 +1,1 @@
-baseUrl=https://vortex.worldofwarships.ru/api/graphql/glossary/
+REACT_APP_BASE_URL=https://vortex.worldofwarships.ru/api/graphql/glossary/
